--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -21,7 +21,7 @@ ol[role='list']{
     padding: 0;
 }
 
-html:focus-within{
+html {
     scroll-behavior: smooth;
 }
 
